testsuite/poke.pkl/format-diag-9.pk
/* { dg-do compile } */

format ("%f64x", 1U); /* { dg-error "" } */
